Store avatar object key and build URL
Persist S3 object keys for user avatars instead of full URLs and construct public URLs at response time. Updated User entity (avatar_object_key), MeController, UserQueryService, UserSyncService, AuthMapper and S3PresignedUrlService to use/return object keys. UserMapper now depends on S3Properties to build the public avatar URL. Also updated docs (README.md, MVP.md) to document current user/admin endpoints, S3 presigned avatar upload flow, and local Postgres port. This centralizes storage of object keys in the DB, supports private buckets, and ensures URLs are derived from configured public base URL.